// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberedStep applies isActive prop correctly 1`] = `
<ForwardRef
  $isActive={true}
  $isCompleted={false}
>
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  >
    <span />
  </ForwardRef>
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  />
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  >
    <ForwardRef
      $isActive={true}
      $isCompleted={false}
    />
    <ForwardRef />
  </ForwardRef>
</ForwardRef>
`;

exports[`NumberedStep applies isCompleted prop correctly 1`] = `
<ForwardRef
  $isCompleted={true}
>
  <ForwardRef
    $isCompleted={true}
  >
    <ForwardRef(Check)
      size={28}
    />
  </ForwardRef>
  <ForwardRef
    $isCompleted={true}
  />
  <ForwardRef
    $isCompleted={true}
  >
    <ForwardRef
      $isCompleted={true}
    />
    <ForwardRef />
  </ForwardRef>
</ForwardRef>
`;

exports[`NumberedStep applies isLast prop correctly 1`] = `
<ForwardRef
  $isCompleted={false}
>
  <ForwardRef
    $isCompleted={false}
  >
    <span />
  </ForwardRef>
  <ForwardRef
    $isCompleted={false}
  >
    <ForwardRef
      $isCompleted={false}
    />
    <ForwardRef />
  </ForwardRef>
</ForwardRef>
`;

exports[`NumberedStep applies title prop correctly 1`] = `
<ForwardRef
  $isCompleted={false}
>
  <ForwardRef
    $isCompleted={false}
  >
    <span />
  </ForwardRef>
  <ForwardRef
    $isCompleted={false}
  />
  <ForwardRef
    $isCompleted={false}
  >
    <ForwardRef
      $isCompleted={false}
    >
      Test Title
    </ForwardRef>
    <ForwardRef />
  </ForwardRef>
</ForwardRef>
`;

exports[`NumberedStep renders children correctly if isActive is provided 1`] = `
<ForwardRef
  $isActive={true}
  $isCompleted={false}
>
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  >
    <span />
  </ForwardRef>
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  />
  <ForwardRef
    $isActive={true}
    $isCompleted={false}
  >
    <ForwardRef
      $isActive={true}
      $isCompleted={false}
    />
    <ForwardRef>
      Content
    </ForwardRef>
  </ForwardRef>
</ForwardRef>
`;
